# aic_application

./: .gitignore  output.txt  pyproject.toml
app/: main.py
app/api/: health.py  search.py
app/common/repository/: __init__.py  base.py
app/controller/: search_controller.py
app/core/: config.py  dependencies.py  logger.py
app/migration/: cli.py  helper.py  ingestion.py
app/models/: common.py  history.py
app/repository/: chat_repo.py  elastic_repo.py  keyframe_repo.py  vector_repo.py
app/schemas/: application.py  search_queries.py  search_results.py  search_settings.py  tags.py
app/services/: fusion_services.py  model_services.py  search_services.py  sparse_encoder.py  tag_services.py
app/services/unilm/beit3/: modeling_finetune.py  utils.py
docker_services/: docker-compose.yml
docker_services/elasticsearch-vi/: Dockerfile
script/: init_db.sh  path_script.sh
